$Id$
===============================================================

9	Luke Howard <lukeh@padl.com>

	* patch from Steven Brudenell to fix dependencies

8	Guido Guenther <agx@sigxcpu.org>

	* remove ccreds_file parameter

7	Luke Howard <lukeh@padl.com>

	* Coding style cleanups

6	Guido Guenther <agx@sigxcpu.org>

	* uses AC_DEFINE_UNQUOTED for CCREDS_FILE so acconfig.h
	  can go
	* adds AM_MAINTAINER_MODE to configure.in so we don't run
	  autoreconf too often
	* makes it possible to select gnuTLS (gcrypt) instead of
	  OpenSSL during compile time (--enable-gcrypt)

5	Guido Guenther <agx@sigxcpu.org>

	* fix an uninitialized variable
	* fix dbopen() usage for Berkeley DB 3
	* add usage option to cc_dump
	* BUG#227: verify password via ccreds_chkpwd for
	  non-root users

4	Luke Howard <lukeh@padl.com>

	* build fix (include syslog.h)

2	Luke Howard <lukeh@padl.com>

	* patch from Nicolas Boullis <nicolas.boullis@ecp.fr>:
	  print last byte of hash
	* patch from Nicolas Boullis <nicolas.boullis@ecp.fr>:
	  handle the case where neither use_first_pass nor try_first_pass
	  are given
	* patch from Guido Guenther <agx@sigxcpu.org>:
	  fix "cc_test any user -" (currently nothing gets deleted from
	  the cache)

1	Luke Howard <lukeh@padl.com>

	* initial revision
